@@ -32,18 +32,16 @@ endif
 
 DRI_DRIVERS =
 EGL_PLATFORMS = x11
-GALLIUM_DRIVERS =
+GALLIUM_DRIVERS = swrast
 VULKAN_DRIVERS =
 
 confflags_DRI3 = -Ddri3=disabled
+confflags_OSMESA =  -Dosmesa=gallium
 
 # hurd doesn't do direct rendering
 ifeq ($(DEB_HOST_ARCH_OS), hurd)
-	DRI_DRIVERS = swrast
-
 	confflags_DIRECT_RENDERING = -Dglx-direct=false
 	confflags_GBM = -Dgbm=disabled
-	confflags_OSMESA = -Dosmesa=classic
 else
 	DRI_DRIVERS += r200,r100
 	GALLIUM_DRIVERS += r600,r300
@@ -95,19 +93,16 @@ else
   # LLVM is required for building r300g, radeonsi and llvmpipe drivers.
   # It's also required for building OpenCL support.
   ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
-	GALLIUM_DRIVERS += ,radeonsi,swrast
+	GALLIUM_DRIVERS += ,radeonsi
 	confflags_GALLIUM += -Dllvm=enabled
 	confflags_GALLIUM += -Dgallium-opencl=icd
-	confflags_OSMESA = -Dosmesa=gallium
 
 	# nine makes sense only on archs that build wine
 	ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 powerpc))
 		confflags_GALLIUM += -Dgallium-nine=true
 	endif
   else
-	DRI_DRIVERS += ,swrast
 	confflags_GALLIUM += -Dllvm=disabled
-	confflags_OSMESA = -Dosmesa=classic
   endif
 
   # build vulkan layers where Vulkan loader is available
