@@ -3,6 +3,8 @@ mesa (20.3.0-2) UNRELEASED; urgency=medium
   * rules: Fix the name of the broadcom vulkan driver.
   * control, rules: Drop llvm support from kfreebsd, as llvm isn't built
     there.
+  * rules: Enable gallium swrast (softpipe) and OSMesa everywhere, as
+    they're not actually tied to llvm being available.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2020 09:03:41 +0200
 
